# sim-mem-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LOG.md  README.md  todo.md
benches/: allocator_benchmarks.rs
output_debug/: benchmark_results.json
output_debug2/: benchmark_results.json
output_debug3/: benchmark_results.json
output_fixed/: benchmark_results.json
scripts/: visualize.py
src/: lib.rs  main.rs
src/engine/: mod.rs
src/memory/: mod.rs  naive.rs  paged.rs
src/metrics/: mod.rs
src/scheduler/: continuous_batching.rs  fcfs.rs  mod.rs
src/workload/: mod.rs
