[package]
name = "sim-mem-rs"
version = "0.3.0"
edition = "2021"
description = "大模型训练内存模拟器 - 离散事件仿真框架"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourusername/sim-mem-rs"
keywords = ["memory-simulator", "discrete-event-simulation", "llm", "training", "allocator"]
categories = ["simulation", "memory-management"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"

[[bench]]
name = "allocator_benchmarks"
harness = false

[[bin]]
name = "sim-mem"
path = "src/main.rs"

[lib]
name = "sim_mem_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1